Added CSV Response

--- a/UrlShortener/src/main/resources/static/index.html
+++ b/UrlShortener/src/main/resources/static/index.html
@@ -36,6 +36,26 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <form action="" class="col-lg-12" id="shortenerCSV" role="form" enctype="multipart/form-data">
+                <div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+                    <input  type="file" name="path" accept=".csv" formenctype="multipart/form-data"
+                           placeholder="Or select your CSV File" title="CSV File">
+                    <span class="input-group-btn"><button
+                            class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <div class="col-sm-offset-4 col-sm-4 text-center">
+                <br/>
+                <div id="resultCSV"/>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
